fix(add): allow grouped blocks to wrap

--- a/static/src/css/matrixExtended.scss
+++ b/static/src/css/matrixExtended.scss
@@ -11,6 +11,11 @@
 .matrix-extended-buttons {
   margin-top: 1px;
   margin-bottom: 10px;
+  flex-wrap: wrap;
+
+  &.ungrouped {
+    flex-wrap: nowrap;
+  }
 }
 
 .matrix-extended-btngroup {
